--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
         <div id="content">
             <h2>Contact Us</h2>
             <ul class="style1">
-<li>Email: Luxuryautos.com</li>
+<li>Email: Auto4Sale.com</li>
 <li>Telephone: 012 345 6789</li>
 </ul>
             <p>Have any questions or inquiries? Feel free to get in touch with us using the contact form below:</p>
